--- a/index.html
+++ b/index.html
@@ -7,30 +7,24 @@
 </head>
 
 <body>
-	<div class="calc">
-		<input type="text" class="display" readonly placeholder="0">
-		<div class="opers">
-			<button>+</button>
-			<button>-</button>
-			<button>*</button>
-			<button>/</button>
-
-		<div class="digits">
-			<button>1</button>
-			<button>2</button>
-			<button>3</button>
-			<button>4</button>
-			<button>5</button>
-			<button>6</button>
-			<button>7</button>
-			<button>8</button>
-			<button>9</button>
-			<button>0</button>
-		</div>
-		<div class="eq">
-			<button>=</button>
-		</div>
-	</div>
+	 <input id="calc" type="text" placeholder="Result appears here">
+  <button>1</button>
+	<button>2</button>
+	<button>3</button>
+	<button>+</button>
+  <button>4</button>
+	<button>5</button>
+	<button>6</button>
+	<button>-</button>
+  <button>7</button>
+	<button>8</button>
+	<button>9</button>
+	<button>/</button>
+  <button>0</button>
+	<button>C</button>
+	<button>=</button>
+	<button>*</button>
+  <button>.</button>
 </body>
 <script src="script.js"></script>
 </html>
