--- a/index.html
+++ b/index.html
@@ -4,33 +4,34 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Calculator</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-	<div class="calc">
-		<input type="text" class="display" readonly placeholder="0">
-		<div class="opers">
-			<button>+</button>
-			<button>-</button>
-			<button>*</button>
-			<button>/</button>
-
-		<div class="digits">
-			<button>1</button>
-			<button>2</button>
-			<button>3</button>
-			<button>4</button>
-			<button>5</button>
-			<button>6</button>
-			<button>7</button>
-			<button>8</button>
-			<button>9</button>
-			<button>0</button>
-		</div>
-		<div class="eq">
-			<button>=</button>
-		</div>
+	<div class="calculator-grid">
+    <div class="output">
+      <div class="previous-operand">548297954</div>
+      <div class="current-operatnd">5452452</div>
+    </div>
+      <button class="span-two">AC</button>
+      <button>DEL</button>
+      <button>/</button>
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>*</button>
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button>+</button>
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
+      <button>-</button>
+      <button>.</button>
+      <button>0</button>
+      <button class="span-two">=</button>
+    </div>
 	</div>
-</body>
-<script src="script.js"></script>
+	</body>
 </html>
